--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /*  your css code here. If applicable */
-.container{
-    background-color: #f8f9fa;
+#signup-form{
+    background-color: rgb(248, 249, 250);
     box-shadow: 3px 3px 12px black;
 	border: 1px solid #ccc;
 	border-radius: 4px;
