--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /*  your css code here. If applicable */
 #signup-form{
-    background-color: rgb(248, 249, 250);
+    background-color: rgba(0, 0, 0, 0);
     box-shadow: 3px 3px 12px black;
 	border: 1px solid #ccc;
 	border-radius: 4px;
